--- a/css/styles.css
+++ b/css/styles.css
@@ -453,6 +453,16 @@ img {
 .footer .container {
   padding-top: 60px;
   padding-bottom: 60px;
+
+  display: flex;
+}
+
+.footer-contacts-wrapper {
+  margin-right: 70px;
+}
+
+.footer ul {
+  display: flex;
 }
 
 .logo-link-footer {
@@ -492,6 +502,59 @@ img {
 .footer-contacts:hover,
 .footer-contacts:focus {
   color: var(--link-hover-color);
+}
+
+.footer-join {
+  margin-top: 12px;
+}
+
+.footer-join h3 {
+  margin-bottom: 20px;
+
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+
+  color: var(--text-white-color);
+}
+
+.footer-social-list li:not(:last-child) {
+  margin-right: 10px;
+}
+
+.footer-social-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer-social-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  width: 44px;
+  height: 44px;
+
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.1);
+  color: var(--text-white-color);
+
+  /* outline: 1px solid red; */
+}
+
+.footer-social-link svg {
+  width: 20px;
+  height: 20px;
+  fill: currentColor;
+}
+
+.footer-social-link:hover,
+.footer-social-link:focus {
+  background-color: var(--link-hover-color);
+  color: var(--text-white-color);
 }
 
 /* ---PORTFOLIO.HTML--- */
@@ -540,6 +603,8 @@ img {
 .works-button:focus {
   color: var(--text-white-color);
   background-color: var(--link-hover-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 /* --- CARDS GRID --- */
@@ -559,6 +624,12 @@ img {
 
 .card-set-item {
   border: 1px solid #eeeeee;
+}
+
+.card-set-item a:hover {
+  display: inline-block;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .card-set-text {
