--- a/css/styles.css
+++ b/css/styles.css
@@ -90,7 +90,7 @@ img {
   align-items: center;
 
   padding-top: 24px;
-  padding-bottom: 12px;
+  padding-bottom: 24px;
 }
 
 .nav-logo .logo-link {
@@ -166,29 +166,24 @@ img {
 
 .icon-mail {
   margin-right: 10px;
-  fill: var(--text-main-color);
+  fill: currentColor;
 }
 
 .icon-smartphone {
   margin-right: 10px;
-  fill: var(--text-main-color);
-  /* fill: currentColor; */
-}
-
-.icon-mail:hover,
-.icon-mail:focus,
-.icon-smartphone:hover,
-.icon-smartphone:focus {
-  fill: var(--link-hover-color);
+  /* fill: var(--text-main-color); */
+  fill: currentColor;
 }
 
 /* СЕКЦИЯ ЗАКАЗАТЬ УСЛУГУ */
 
 .tagline-section {
   max-width: 1600px;
-  height: 600px;
+  /* height: 600px; */
   margin-left: auto;
   margin-right: auto;
+  padding-top: 200px;
+  padding-bottom: 200px;
 
   background-color: var(--background-dark);
   background-image: linear-gradient(
@@ -204,7 +199,7 @@ img {
 }
 
 .tagline-section-title {
-  padding-top: 200px;
+  /* padding-top: 200px; */
   width: 696px;
   margin-left: auto;
   margin-right: auto;
@@ -222,7 +217,7 @@ img {
 .tagline-section-order {
   display: inline-block;
   margin-top: 30px;
-  margin-bottom: 200px;
+  /* margin-bottom: 200px; */
   padding: 10px 32px;
 
   font-weight: bold;
@@ -272,6 +267,8 @@ img {
 }
 
 .advantages-section-title {
+  margin-bottom: 10px;
+
   font-weight: bold;
   font-size: 14px;
   line-height: 16px;
@@ -281,7 +278,7 @@ img {
 }
 
 .advantages-section-text {
-  margin-top: 10px;
+  /* margin-top: 10px; */
 
   font-size: 14px;
   line-height: 24px;
@@ -313,12 +310,12 @@ img {
 }
 
 .team-section > .container {
+  padding-top: 94px;
   padding-bottom: 94px;
 }
 
 .team-section .section-title {
   margin-bottom: 50px;
-  padding-top: 94px;
 }
 
 .team-section ul {
@@ -337,7 +334,8 @@ img {
 }
 
 .team-section-text {
-  padding: 30px 30px 0 30px;
+  padding: 30px;
+  /* text-align: center; */
 }
 
 .team-section-name {
@@ -352,6 +350,7 @@ img {
 
 .team-section-position {
   margin-top: 10px;
+  margin-bottom: 16px;
 
   font-weight: normal;
   font-size: 16px;
@@ -362,9 +361,9 @@ img {
   color: var(--text-main-color);
 }
 
-.team-social-list {
+/* .team-social-list {
   margin: 16px 32px 30px 32px;
-}
+} */
 
 .team-social-list li:not(:last-child) {
   margin-right: 10px;
@@ -466,16 +465,15 @@ img {
 }
 
 .logo-link-footer {
+  display: inline-block;
+  margin-bottom: 20px;
+
   font-family: 'Raleway', sans-serif;
   font-weight: bold;
   font-size: 26px;
   line-height: 31px;
   letter-spacing: 0.03em;
   color: var(--text-white-color);
-}
-
-.footer-address {
-  margin-top: 20px;
 }
 
 .footer-location-text {
